# RestaurantApp

./: .gitignore  CMakeLists.txt  README.md  database.cpp  database.h  delegate.cpp  delegate.h  item.cpp  item.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  receipt.cpp  receipt.h  table.cpp  table.h
